sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:8: error: not found: value depart
  var baseTestee:Int = depart+1
                       ^